--- a/src/main/resources/templates/transfertrack.html
+++ b/src/main/resources/templates/transfertrack.html
@@ -4,107 +4,21 @@
 <head>
 <meta charset="UTF-8">
 <title>ร้านขายของน้องหมา </title>
+<link rel="stylesheet" th:href="@{/CSS/Sfirstpage.css}">
 <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@300;400&display=swap" rel="stylesheet">
 <style type="text/css">
-/* Color Variables */
-:root {
-  --brown: #cbaf87;
-  --x: #c7b198;
-  --brown2: #f4ebc1;
-}
 
-body{
-	font-family: 'Bai Jamjuree', sans-serif;
-	/*height: 100vh;*/
-	display: flex;
-	background-color: var(--brown2);
-	color: gray;
-}
-
-.center{
-  	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-
-.sellerheader {
-	position: fixed;
-	top: 0;
-	left: 0;
-	background-color: var(--brown);
-	color: white;
-	font-size: 20pt;
-	height: 60px;
-	width: 100%;
-	box-shadow: 2px 2px 5px gray;
-}
 .tabheadersecond {
 	padding: 2%;
 	position: fixed;
-	top: 80px;
+	top: 90px;
 	left: 0;
 	width: 100%;
 }
 details {
 	margin-top: 120px;
-	width: 100%;
-	border: 2px gray solid;
-}
-summary{
-	background-color: #e7d39f;
-	height: 30pt;
-	display: flex;
-	align-items: center;
-	padding-left: 2%;
-}
-.tableheader{
-	background-color: #e4e4e4;
-}
-.maintable{
-	background-color: gray;
-	width: 100%;
-}
-.maintable tr, .maintable td {
-	background-color: var(--brown2);
 }
 
-.btncheck{
-	background-color: #79d70f;
-	color: white;
-	width: 40pt;
-	height: 22pt;
-	border: none;
-	border-radius: 22px;
-	box-shadow: 2px 2px 5px gray;
-	cursor: pointer;
-	display: inline-block;
-}
-
-.checked{
-	position: relative;
-	background-color: white;
-	width: 50%;
-	height: 80%;
-	cursor: default;
-	flex-flow: column;
-}
-.checked iframe{
-	width: 100%;
-	height: 100%;
-	border: none;
-}
-#overlay, #overlaydetail {
-  position: fixed;
-  visibility: hidden;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-color: rgba(0,0,0,0.5);
-  z-index: 2;
-  cursor: pointer;
-}
 .tabletrack{
 	width: 100%;
 	overflow-y: scroll;
@@ -117,32 +31,6 @@ summary{
 	background-color: gray;
 	width: 200px;
 	height: 200px;
-}
-.overlayheader{
-	position: fixed;
-	top: 0;
-	left: 0;
-	font-size: 16pt;
-	text-align: center;
-	height: 50pt;
-	/*padding: 2% 0 2% 0;*/
-	width: 100%;
-	background-color: white/*var(--brown)*/;
-	color: gray/*white*/;
-	box-shadow: 2px 2px 2px gray;
-}
-.overlayconfirm{
-	position: fixed;
-	bottom: 0;
-	left: 0;
-	font-size: 16pt;
-	text-align: center;
-	height: 40pt;
-	width: 100%;
-	background-color:  #79d70f;
-	border: none;
-	color: white;
-	box-shadow: 2px -2px 2px gray;
 }
 
 .idproduct{
@@ -174,49 +62,9 @@ hr {
 .container{
 	width: 80%;
 }
-.overlayheader{
-	position: absolute;
-	top: 0;
-	left: 0;
-	font-size: 16pt;
-	text-align: center;
-	padding: 2% 0 2% 0;
-	width: 100%;
-	background-color: var(--brown);
-	color: white;
-	box-shadow: 2px 2px 2px gray;
-}
-.overlayconfirm{
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	font-size: 16pt;
-	text-align: center;
-	padding: 2% 0 2% 0;
-	width: 100%;
-	background-color:  #79d70f;
-	border: none;
-	color: white;
-	box-shadow: 2px -2px 2px gray;
-}
-#detaildata{
-	position: absolute;
-	font-size: 10pt;
-	right: 2%;
-	bottom: 2%;
-	text-decoration: underline;
-	cursor: pointer;
-}
+
 .tabledetail:first-child{
 	width: 20px;
-}
-.back{
-	position: absolute;
-	top: 0;
-	left: 10pt;
-	text-decoration: none;
-	font-size: 30pt;
-	color: white;
 }
 </style>
 <script>
@@ -246,9 +94,61 @@ function offdetail() {
 </script>
 </head>
 <body>
-	<div class="sellerheader center">ต้องจัดส่ง </div>
-	<a href="/firstpage" class="back"><</a>
-	
+
+<!-- overlay -->
+	<div class="center" id="overlaydetail" onclick="offdetail()">
+		<div class="checked center">
+			<div class="overlayheader center">รายละเอียดเพิ่มเติม </div>
+			<table class="tabledetail" style="width: 80%;">
+				<tr>
+					<td>รหัส order</td>
+					<td id="overlaytableTD1"></td>
+				</tr>
+				<tr>
+					<td>ชื่อผู้ซื้อ </td>
+					<td id="overlaytableTD2"></td>
+				</tr>
+				<tr>
+					<td>รายการ </td>
+					<td>จำนวน</td>
+					<td>ราคา (ต่อชิ้น)</td>
+				</tr>
+				<tr id="overlaytableTD4">
+					<td>รายการ </td>
+					<td>จำนวน</td>
+					<td>ราคา </td>
+				</tr>
+				<tr>
+					<td>ยอดรวม </td>
+					<td id="overlaytableTD5"></td>
+				</tr>
+				<tr>
+					<td>ที่อยู่</td>
+					<td id="overlaytableTD6"></td>
+				</tr>
+			</table>
+		</div>
+	</div>
+
+<!-- Main Page -->
+<ul>		
+	<li style="float: left;">
+		<a href="/myinfo">
+			<img class="profilepicture" th:if="${session.user.getPhotoUser() == null}" alt="can't download" src="https://scontent.fbkk22-2.fna.fbcdn.net/v/t1.0-9/83968655_1508266912688925_789788986167001088_o.jpg?_nc_cat=106&_nc_sid=09cbfe&_nc_eui2=AeEmS9a7V_5EfIh3isYQehQUdnXS_5a1mcd2ddL_lrWZxwCZekQyIsKnHov1EeLDg-A_dWPuo1Ea4PKB91i3xWso&_nc_ohc=O0b9t4pD7DEAX8oKyDd&_nc_ht=scontent.fbkk22-2.fna&oh=abb0c36270eb66c217b41b3c3c035c2d&oe=5F85E625">
+			<img class="profilepicture" th:if="${session.user.getPhotoUser() != null}" alt="can't download" th:src="@{'data:image/jpeg;base64,'+${session.user.getPhotoUser()}}">
+		</a>
+	</li>
+	<li style="float: right;"><a href="/myinfo" th:text="${session.user.getName()}"></a></li>
+	<a href="/logout" class="logout">logout</a>
+	<div class="white"></div>
+</ul>
+<div class="tab">
+  	<a href="/editproduct" class="tablinks" onclick="openTab(event, 'editproduct')">แก้ไขสินค้า </a>
+	<a href="/checking" class="tablinks" onclick="openTab(event, 'transfercheck')">ตรวจสอบ </a>
+	<a href="/tracking" class="tablinks active" onclick="openTab(event, 'transfertrack')">ต้องจัดส่ง </a>
+	<a href="/complete" class="tablinks" onclick="openTab(event, 'transfercomplete')">จัดส่งแล้ว </a>
+ 	<a href="/transfercancel" class="tablinks" onclick="openTab(event, 'transfercancel')">สินค้าที่ถูกยกเลิก </a>
+</div>
 	<div class="tabheadersecond">
 		<a href="/createPDF">ปริ๊นชื่อ-ที่อยู่ผู้ซื้อทั้งหมด</a>
 	</div>
@@ -285,39 +185,5 @@ function offdetail() {
 		</table>
 	</details>
 	
-	<!-- List order from database -->
-	<div class="center" id="overlaydetail" onclick="offdetail()">
-		<div class="checked center">
-			<div class="overlayheader center">รายละเอียดเพิ่มเติม </div>
-			<table class="tabledetail" style="width: 80%;">
-				<tr>
-					<td>รหัส order</td>
-					<td id="overlaytableTD1"></td>
-				</tr>
-				<tr>
-					<td>ชื่อผู้ซื้อ </td>
-					<td id="overlaytableTD2"></td>
-				</tr>
-				<tr>
-					<td>รายการ </td>
-					<td>จำนวน</td>
-					<td>ราคา (ต่อชิ้น)</td>
-				</tr>
-				<tr id="overlaytableTD4">
-					<td>รายการ </td>
-					<td>จำนวน</td>
-					<td>ราคา </td>
-				</tr>
-				<tr>
-					<td>ยอดรวม </td>
-					<td id="overlaytableTD5"></td>
-				</tr>
-				<tr>
-					<td>ที่อยู่</td>
-					<td id="overlaytableTD6"></td>
-				</tr>
-			</table>
-		</div>
-	</div>
 </body>
 </html>
