--- a/src/main/resources/static/CSS/Sfirstpage.css
+++ b/src/main/resources/static/CSS/Sfirstpage.css
@@ -4,15 +4,17 @@
 :root {
   --brown: #cbaf87;
   --x: #c7b198;
-  --brown2: #f4ebc1;
+  --brownbg: #f4ebc1;
+  --browntab: #e8cca3;
+  --green: #79d70f;
+  --grey: #707070;
 }
 
 body{
 	font-family: 'Bai Jamjuree', sans-serif;
-	height: 100vh;
+	margin: 120px 10%;
 	display: flex;
-	background-color: var(--brown2);
-	color: gray;
+	background-color: var(--brownbg);
 }
 
 .center{
@@ -23,15 +25,6 @@ body{
 
 
 /* Nav */
-table {
-	/*margin: 5px;
-	margin-left: 40%;*/
-	border: none;
-	/*padding: 10px 20px;*/
-	cursor: pointer;
-	border-radius: 6px;
-}
-
 ul {
 	position: fixed;
 	top: 0;
@@ -43,9 +36,9 @@ ul {
 	overflow: hidden;
 	background-color: var(--brown);
 	box-shadow: 2px 2px 5px gray; 
+	z-index: 999;
 }
 li {
-	float: left;
 	height: 60px;
 }
 li a {
@@ -60,118 +53,146 @@ li a {
 	width: 50px;
 	height: 50px;
 }
-
-/* Login Page */
-input[type="text"],input[type="password"]{
-	height: 16pt;
-	border-radius: 16pt;
-	border: 1px solid gray;
-}
-input[type="submit"]{
-	font-family: 'Bai Jamjuree', sans-serif;
-	background-color: #1592E6;
-	border: none;
-	padding: 5px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	font-size: 14pt;
-	margin: 4px 2px;
-	cursor: pointer;
-	border-radius: 10px;
-	width: 100%;
-	color: white;
-}
-h1{
-	margin: -5% 0 0 0;
-}
-tr{
-	height: 14pt;
-}
-.loginwhitebg{
-	flex-direction: column;
-	background-color: rgba(255,255,255,0.75);
-	border-radius: 0 100px;
-	width: 60%;
-	height: 80%;
-	box-shadow: 5px 5px 5px gray;
-	margin-top: 6%; 
-}
-.col1{
-	width: 50%;
-	height: 100%;
-	float: left;
-}
-.col2{
-	width: 50%;
-	height: 100%;
-	float: right;
-	flex-direction: column;
-}
-.incorrect{
-	color: red;
-}
-
-.forgotpw{
-	font-size: 10pt;
-	float: right;
-}
-.newuser{
-	width: 100%;
-	height: 40%;
-}
-.signup{
-	color: #1592E6;
-	text-decoration: none;
-	font-size: 14pt;
-}
-
-.center{
-  	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-.btnfirstpage {
-	box-sizing: border-box;
-	appearance: none;
-	background-color: transparent;
-	border: 2px solid var(--brown);
-	border-radius: 50px;
-	color: var(--brown);
-	cursor: pointer;
-	align-self: center;
-	font-size: 1rem;
-	font-weight: 400;
-	line-height: 1;
-	margin: 20px;
-	padding: 1.2em 2.8em;
-	text-decoration: none;
-	text-align: center;
-	text-transform: uppercase;
-	font-family: 'Montserrat', sans-serif;
-	font-weight: 700;
-	height: 15%;
-	width: 40%;
-}
-.btnfirstpage:hover{
-	color: white;
-  	transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
-  	box-shadow: 0 0 40px 40px var(--brown) inset;
-}
-.whitebg{
-	flex-direction: column;
-	background-color: rgba(255,255,255,0.75);
-	border-radius: 10px;
-	width: 40%;
-	height: 70%;
-	box-shadow: 5px 5px 5px gray;
-}
 .logout{
 	position: fixed;
 	top: 35px;
 	right: 100px;
 	color: #30475e;
+}
+
+/* Style the secondary tab */
+.tab {
+	position: fixed;
+	top: 60px;
+	left: 0;
+	width: 100%;
+	height: 30pt;
+    font-weight: bold;
+  	overflow: hidden;
+  	box-shadow: 2px 2px 5px gray;
+	background-color: var(--browntab);
+	z-index: 900;
+}
+/* Style the buttons inside the tab */
+.tab a {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  line-height: 30pt;
+  width: 100pt;
+  transition: 0.3s;
+  font-size: 17px;
+  text-align: center;
+  text-decoration: none;
+  color: var(--grey);
+}
+/* Change background color of buttons on hover */
+.tab a:hover {
+	background-color: #bbb;
+}
+/* Create an active/current tablink class */
+.tab a.active {
+	background-color: var(--grey);
+	color: white;
+}
+
+
+/* Seller First page */
+#overlay, #overlaydetail {
+  position: fixed;
+  visibility: hidden;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 9999;
+  cursor: pointer;
+}
+.checked{
+	position: relative;
+	background-color: white;
+	width: 50%;
+	height: 80%;
+	cursor: default;
+	flex-flow: column;
+}
+.checked iframe{
+	width: 100%;
+	height: 100%;
+	border: none;
+}
+.overlayheader{
+	position: absolute;
+	display: flex;
+	flex-flow: row;
+	top: 0;
+	left: 0;
+	font-size: 16pt;
+	text-align: center;
+	height: 50px;
+	width: 100%;
+	background-color: var(--brown);
+	color: white;
+	box-shadow: 2px 2px 2px gray;
+}
+.overlayconfirm{
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	font-size: 16pt;
+	text-align: center;
+	padding: 2% 0 2% 0;
+	width: 100%;
+	background-color:  var(--green);
+	border: none;
+	color: white;
+	box-shadow: 2px -2px 2px gray;
+}
+#detaildata{
+	position: absolute;
+	font-size: 10pt;
+	right: 2%;
+	bottom: 2%;
+	text-decoration: underline;
+	cursor: pointer;
+}
+
+/* details */
+details {
+	width: 100%;
+	border: 2px gray solid;
+}
+summary{
+	background-color: #e7d39f;
+	height: 30pt;
+	display: flex;
+	align-items: center;
+	padding-left: 2%;
+}
+.tableheader{
+	background-color: #e4e4e4;
+}
+.maintable{
+	background-color: gray;
+	width: 100%;
+}
+.maintable tr, .maintable td {
+	background-color: var(--brownbg);
+}
+
+
+.btncheck{
+	background-color: var(--green);
+	color: white;
+	width: 60pt;
+	height: 22pt;
+	border: none;
+	border-radius: 22px;
+	box-shadow: 2px 2px 5px gray;
+	cursor: pointer;
 }
 
 
