--- a/src/main/resources/templates/editproduct.html
+++ b/src/main/resources/templates/editproduct.html
@@ -3,39 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>ร้านขายของน้องหมา </title>
+<link rel="stylesheet" th:href="@{/CSS/Sfirstpage.css}">
 <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@300;400&display=swap" rel="stylesheet">
 <style>
-:root {
-  --brown: #cbaf87;
-  --x: #c7b198;
-  --brownbg: #f4ebc1;
-  --browntab: #e8cca3;
-  --green: #79d70f;
-  --grey: #707070;
-}
-
-body{
-	font-family: 'Bai Jamjuree', sans-serif;
-	height: 100vh;
-	margin: 120px 10%;
-	display: flex;
-	background-color: var(--brownbg);
-}
-
-.center{
-  	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-.back{
-	position: fixed;
-	top: 0;
-	left: 10pt;
-	text-decoration: none;
-	font-size: 30pt;
-	color: white;
-}
-
 .tabcat{
 	color: blue;
 }
@@ -120,6 +90,24 @@ font-family: 'Bai Jamjuree', sans-serif;
 </head>
 
 <body>
+<ul>		
+	<li style="float: left;">
+		<a href="/myinfo">
+			<img class="profilepicture" th:if="${session.user.getPhotoUser() == null}" alt="can't download" src="https://scontent.fbkk22-2.fna.fbcdn.net/v/t1.0-9/83968655_1508266912688925_789788986167001088_o.jpg?_nc_cat=106&_nc_sid=09cbfe&_nc_eui2=AeEmS9a7V_5EfIh3isYQehQUdnXS_5a1mcd2ddL_lrWZxwCZekQyIsKnHov1EeLDg-A_dWPuo1Ea4PKB91i3xWso&_nc_ohc=O0b9t4pD7DEAX8oKyDd&_nc_ht=scontent.fbkk22-2.fna&oh=abb0c36270eb66c217b41b3c3c035c2d&oe=5F85E625">
+			<img class="profilepicture" th:if="${session.user.getPhotoUser() != null}" alt="can't download" th:src="@{'data:image/jpeg;base64,'+${session.user.getPhotoUser()}}">
+		</a>
+	</li>
+	<li style="float: right;"><a href="/myinfo" th:text="${session.user.getName()}"></a></li>
+	<a href="/logout" class="logout">logout</a>
+	<div class="white"></div>
+</ul>
+<div class="tab">
+  	<a href="/editproduct" class="tablinks active" onclick="openTab(event, 'editproduct')">แก้ไขสินค้า </a>
+	<a href="/checking" class="tablinks" onclick="openTab(event, 'transfercheck')">ตรวจสอบ </a>
+	<a href="/tracking" class="tablinks" onclick="openTab(event, 'transfertrack')">ต้องจัดส่ง </a>
+	<a href="/complete" class="tablinks" onclick="openTab(event, 'transfercomplete')">จัดส่งแล้ว </a>
+ 	<a href="/transfercancel" class="tablinks" onclick="openTab(event, 'transfercancel')">สินค้าที่ถูกยกเลิก </a>
+</div>
 
 <table>
 	<tr>
@@ -130,18 +118,7 @@ font-family: 'Bai Jamjuree', sans-serif;
 </table>
 <a class="cataddheader" href="/addcategory">+</a>
 
-<a class="back" href="/firstpage"><</a>
 <table class="tablecat">
-	<!-- <tr>
-		<td>
-			<div th:each="cat: ${catlist}" style="display: inline" th:if="${catlist != null}">
-				<a th:href="@{'/editproduct/' + ${cat.getIdCategory()}}" th:value="${cat.getNameCat()}" th:text="${cat.getNameCat()}"></a>
-			</div>
-			<a class="catheader" href="#">เสื้อ </a>
-			<a class="catheader" href="#">แก้ว </a>
-			<a class="cataddheader" href="/addcategory">+</a>
-		</td>
-	</tr> -->
 	<tr class="sep" th:if="${cat != null}">
 		<td>
 			<p>แก้ไขรายละเอียดเพิ่มเติม </p>
