--- a/src/main/resources/templates/transfercancel.html
+++ b/src/main/resources/templates/transfercancel.html
@@ -4,28 +4,8 @@
 <head>
 <meta charset="UTF-8">
 <title>ร้านขายของน้องหมา </title>
+<link rel="stylesheet" th:href="@{/CSS/Sfirstpage.css}">
 <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@300;400&display=swap" rel="stylesheet">
-<style type="text/css">
-
-summary{
-	background-color: #e7d39f;
-	height: 30pt;
-	display: flex;
-	align-items: center;
-	padding-left: 2%;
-}
-.tableheader{
-	background-color: #e4e4e4;
-}
-.maintable{
-	background-color: gray;
-	width: 100%;
-}
-.maintable tr, .maintable td {
-	background-color: var(--brownbg);
-}
-
-</style>
 <script>
 function ondetail() {
   document.getElementById("overlaydetail").style.visibility = "visible";
