--- a/src/main/resources/templates/myinfo.html
+++ b/src/main/resources/templates/myinfo.html
@@ -4,65 +4,9 @@
 <head>
 <meta charset="UTF-8">
 <title>ร้านขายของน้องหมา </title>
+<link rel="stylesheet" th:href="@{/CSS/Sfirstpage.css}">
 <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@300;400&display=swap" rel="stylesheet">
 <style type="text/css">
-/* Color Variables */
-:root {
-  --brown: #cbaf87;
-  --x: #c7b198;
-  --brown2: #f4ebc1;
-}
-
-body{
-	font-family: 'Bai Jamjuree', sans-serif;
-	height: 100vh;
-	display: flex;
-	background-color: var(--brown2);
-	color: gray;
-}
-
-.center{
-  	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-
-/* Nav */
-ul {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-	background-color: var(--brown);
-	box-shadow: 2px 2px 5px gray; 
-}
-li {
-	float: left;
-	height: 60px;
-}
-li a {
-	display: block;
-	color: white;
-	text-align: center;
-	padding: 4px 16px;
-	text-decoration: none;
-}
-.profilepicture{
-	border-radius: 50px;
-	width: 50px;
-	height: 50px;
-}
-.logout{
-	position: fixed;
-	top: 35px;
-	right: 100px;
-	color: #30475e;
-}
 
 /* Change Information */
 .brownbg{
@@ -162,6 +106,7 @@ function togglePW() {
 }
 </script>
 </head>
+
 <body class="center">
 	<ul th:if="${session.user.getType() == 'Customer'}">
 		<li><a href="/firstpage"><img class="profilepicture" th:src="@{/Pembroke-Welsh-Corgi-Puppies-Lying-Down.jpg"></a></li>
